<resources>
    <string name="app_name">MasterBunpou</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_edit">Edit</string>
    <string name="action_home">Home</string>
    <string name="action_bookmark">Bookmark</string>
    <string name="nav_item_N1">N1</string>
    <string name="nav_item_N2">N2</string>
    <string name="nav_item_N3">N3</string>
    <string name="nav_item_N4">N4</string>
    <string name="nav_item_N5">N5</string>

    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>

    <!--Drawer contents-->
    <string name="header1">日本語</string>
    <string name="header2">文法</string>
    <string name="title_jlpt">JLPT</string>
    <string name="title_customize">Yours</string>
    <string name="title_bookmark">Bookmarks</string>
    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_N1</item>
        <item>@string/nav_item_N2</item>
        <item>@string/nav_item_N3</item>
        <item>@string/nav_item_N4</item>
        <item>@string/nav_item_N5</item>
    </string-array>


    <!-- View-->
    <string name="card_view_title_meaning">Ý nghĩa:</string>
    <string name="card_view_btn_learn_more">Learn More</string>
    <string name="card_view_title_usage">Cách dùng:</string>
    <string name="card_view_title_ex">Ví dụ:</string>
    <string name="data_loading_noti">Loading data</string>
    <string name="please_wait">Please wait...</string>
    <string name="no_data">No data</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="under_construction">Under construction ~.~</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--search view-->
    <string name="search_hint">Type grammar pattern</string>
    <string name="search_label">Search</string>
</resources>
