<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">


    <RelativeLayout
        android:id="@+id/nav_header_container"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary">
        <TextView
            android:id="@+id/txt_header1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/header1"
            android:textSize="35dp"
            android:gravity="center"
            android:textColor="@color/textColorPrimary"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/header2"
            android:layout_below="@id/txt_header1"
            android:textSize="35dp"
            android:gravity="center"
            android:textColor="@color/textColorPrimary"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/nav_header_container">
        <TextView
            android:paddingTop="5dp"
            android:paddingLeft="6dp"
            android:id="@+id/txt_title_jlpt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_jlpt"
            android:textSize="@dimen/text_size_nav_header"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@color/textColorPrimaryDark"
            />
        <View
            android:id="@+id/divider1"
            android:layout_marginTop="8dp"
            android:layout_below="@id/txt_title_jlpt"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            />
        <android.support.v7.widget.RecyclerView
            android:paddingTop="33dp"
            android:paddingLeft="10dp"
            android:id="@+id/frag_jlpt_item_container"
            android:layout_width="match_parent"
            android:layout_height="@dimen/nav_drawer_jlpt_heigh"
            android:layout_marginTop="15dp" />

        <View
            android:id="@+id/divider2"
            android:layout_marginTop="8dp"
            android:layout_below="@id/frag_jlpt_item_container"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            />

        <TextView
            android:paddingTop="8dp"
            android:paddingLeft="6dp"
            android:id="@+id/txt_title_bookmark"
            android:layout_below="@id/frag_jlpt_item_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="@string/title_bookmark"
            android:textSize="@dimen/text_size_nav_header"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@color/textColorPrimaryDark"
            />

    </RelativeLayout>


</RelativeLayout>